--- a/css/main.css
+++ b/css/main.css
@@ -9,18 +9,21 @@ body {
     margin: 0;
 }
 
-.aboutPage {
-    display: block;
-    background-color: antiquewhite;
-    width: 100px;
-    height: 100px;
-
+.hidden{
+    display: none;
 }
 
-@media screen and (max-width:660px) {
+@media screen and (max-width:575.98px)  {
+    /* body {
+        width: 100%;
+        max-width: 500px;
+    } */
+    header {
+        width: 100%;
+    }
     header > img {
         display: block;
-        width: 350px;
+        min-width: 350px;
         height: 150px;
         margin: auto;
         background-size: contain;
@@ -52,10 +55,9 @@ body {
         color: black;
     }
     .interior-img {
-        max-width: 800px;
-        margin: auto;
         margin-bottom: 50px;
     }
+
     footer {
         border-top: 1px antiquewhite solid;
     }
@@ -71,7 +73,7 @@ body {
 
         
 }
-@media screen and (min-width : 660px){
+@media screen and (min-width : 575.98px){
     header > img {
         display: block;
         width: 350px;
@@ -104,10 +106,16 @@ body {
         text-decoration: none;
         color: black;
     }
-    .interior-img {
-        margin-bottom: 50px;
+    .img {
+        margin-top: 50px;
+    }
+    .img > div {
+        max-width: 900px;
+        margin: 0 auto;
+        height: 550px;
     }
     footer {
+        margin-top: 50px;
         border-top: 1px antiquewhite solid;
     }
     footer> div{
